# foxy-robot

./: .gitignore  .repos  hw.repos  install-hw.sh  install-sim.sh  jetson_hut.py  jetson_motor.py  python_interface script  sim.humble.repos
.vitepress/: config.mts
docs/: diagrams.drawio  installation.md
docs/developers/: guide.md
docs/hardware/: pinouts.md
docs/system/: overview.md
foxy_bringup/: package.xml
foxy_bringup/config/: controllers.yaml  default.rviz  localization.yaml
foxy_bringup/launch/: single.launch.py  spawn.launch.py  start.launch.py
foxy_bringup_hw/: CMakeLists.txt  package.xml
foxy_bringup_hw/config/: ov5447_640x480.yaml
foxy_bringup_hw/launch/: bringup.launch.py
foxy_bringup_sim/: CMakeLists.txt  package.xml
foxy_bringup_sim/launch/: bringup.launch.py  gz_sim.launch.py  spawn.launch.py  world.launch.py
foxy_controllers/: CMakeLists.txt  foxy_controller_plugins.xml  package.xml
foxy_controllers/include/foxy_controllers/: battery_state_broadcaster.hpp
foxy_controllers/src/: battery_state_broadcaster.cpp
foxy_description/: CMakeLists.txt  README.md  package.xml
foxy_description/assets/small_loop/: small_loop.sdf
foxy_description/assets/straight_lane/: straight_lane.sdf
foxy_description/gz-config/: client-gui.config
foxy_description/hooks/: foxy_description.dsv.in
foxy_description/launch/: display.launch.py
foxy_description/meshes/: foxy-chasis.mtl  wheel.mtl
foxy_description/sensors/: imu_generic.xacro  leds.xacro  lidar_generic.xacro  rgb_camera_generic.xacro  vl53l0x.xacro
foxy_description/urdf/: base.xacro  foxy.urdf.xacro
foxy_description/worlds/: large_map.world  small_loop.world  small_map.world  straight_lane.world
foxy_gz/: CMakeLists.txt  package.xml
foxy_gz/assets/duck/: duck.sdf
foxy_gz/assets/gfl/: gfl.config  gfl.sdf  odm_textured_model_geo.conf
foxy_gz/assets/large_map/: large_map.sdf
foxy_gz/assets/small_loop/: small_loop.sdf
foxy_gz/assets/small_map/: small_map.sdf
foxy_gz/assets/straight_lane/: straight_lane.sdf
foxy_gz/gz-config/: server.config
foxy_gz/worlds/: empty.world  large_map.world  small_loop.world  small_map.world  straight_lane.world
foxy_gz_plugins/: CMakeLists.txt  package.xml
foxy_gz_plugins/examples/: led_system_example.sdf
foxy_gz_plugins/include/foxy_gz_plugins/: led_system.hh
foxy_gz_plugins/src/: led_system.cc
foxy_hardware_interface/: CMakeLists.txt  foxy_hardware_plugins.xml  package.xml
foxy_hardware_interface/include/foxy_hardware_interface/: battery_client.hpp  batteryd.h  foxy.h  imu_sensor_hardware.hpp  motors_hardware.hpp  quadrature_encoder.hpp
foxy_hardware_interface/src/: battery_client.cpp  button.cpp  imu_sensor_hardware.cpp  leds.cpp  motors_hardware.cpp  tof.cpp
