<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foxy_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="harley.lara@outlook.com">harley</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <exec_depend>controller_manager</exec_depend>

  <!-- ros2 control - controllers -->
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>

  <!-- hardware specific controllers -->
  <exec_depend>foxy_controllers</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
