<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foxy_bringup_hw</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="harley.lara@outlook.com">eolab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>foxy_bringup</exec_depend>
  <exec_depend>foxy_description</exec_depend>
  <exec_depend>foxy_hardware_interface</exec_depend>
  <exec_depend>gscam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
